--- a/README
+++ b/README
@@ -1,12 +1,2 @@
 # formtastic-cocoon-demo
-
-[cocoon](http://github.com/nathanvda/cocoon) is a Rails3 gem to allow easier handling of nested forms.
-
-This is a small demo that shows cocoon in action together with slim and simple_form.
-
-Cocoon is formbuilder-agnostic, so it works with standard Rails, or Formtastic or simple_form.
-
-
-## Copyright
-
-Copyright (c) 2010 Nathan Van der Auwera. See LICENSE for details.
+Demo project with formtastic, cocoon, client_side_validation
